js-fullstack/cycle-stage-model-view: front: Fixed a bug on navigation.
- Width right:-100% was causing the horizontal scroll to trigger.

--- a/js-fullstack/cycle-stage-model-view/front/src/components/navigation/view.css
+++ b/js-fullstack/cycle-stage-model-view/front/src/components/navigation/view.css
@@ -1,17 +1,17 @@
 :root {
-    --navigation-size        : 2.5rem;
-    --navigation-color-fg    : #dcdcdc;
-    --navigation-color-bg    : #4d4e4e;
-    --navigation-cont-scale  : 0.7;
-    --navigation-cont-size   : calc(var(--navigation-size) * var(--navigation-cont-scale));
-    --navigation-cont-margin : calc(var(--navigation-size) * ((1 - var(--navigation-cont-scale)) / 2));
-    --navigation-icon-space  : calc(var(--navigation-cont-size) / 7.0);
+    --navigation-size: 2.5rem;
+    --navigation-color-fg: #dcdcdc;
+    --navigation-color-bg: #4d4e4e;
+    --navigation-cont-scale: 0.7;
+    --navigation-cont-size: calc(var(--navigation-size) * var(--navigation-cont-scale));
+    --navigation-cont-margin: calc(var(--navigation-size) * ((1 - var(--navigation-cont-scale)) / 2));
+    --navigation-icon-space: calc(var(--navigation-cont-size) / 7.0);
 }
 
 :local .navigation {
     & {
-        position    : relative;
-        user-select : none;
+        position: relative;
+        user-select: none;
         background: var(--navigation-color-bg);
     }
 
@@ -21,10 +21,10 @@
      */
     & > h1 {
         display: inline-block;
-        line-height : var(--navigation-cont-size);
-        margin      : var(--navigation-cont-margin);
-        margin-left : calc(1.5 * var(--navigation-cont-margin));
-        color       : var(--navigation-color-fg);
+        line-height: var(--navigation-cont-size);
+        margin: var(--navigation-cont-margin);
+        margin-left: calc(1.5 * var(--navigation-cont-margin));
+        color: var(--navigation-color-fg);
 
         font-size: var(--navigation-cont-size);
         text-shadow: 2px 2px 0 color(var(--navigation-color-bg) blackness(90%))
@@ -35,24 +35,24 @@
      * The tipical icon, prepared for transitioning into an "x"
      */
     & > aside {
-        position : absolute;
-        z-index  : 0;
-        right    : 0;
-        top      : 0;
-        width        : var(--navigation-cont-size);
-        height       : var(--navigation-cont-size);
-        margin       : var(--navigation-cont-margin);
-        margin-right : calc(1.5 * var(--navigation-cont-margin));
+        position: absolute;
+        z-index: 0;
+        right: 0;
+        top: 0;
+        width: var(--navigation-cont-size);
+        height: var(--navigation-cont-size);
+        margin: var(--navigation-cont-margin);
+        margin-right: calc(1.5 * var(--navigation-cont-margin));
 
         & > span {
-            z-index  : 1;
-            display  : block;
-            position : relative;
-            width            : 100%;
-            height           : var(--navigation-icon-space);
-            border-radius    : calc(var(--navigation-icon-space) / 2);
-            background       : var(--navigation-color-fg);
-            transform-origin : 0 calc(var(--navigation-icon-space) / 2);
+            z-index: 1;
+            display: block;
+            position: relative;
+            width: 100%;
+            height: var(--navigation-icon-space);
+            border-radius: calc(var(--navigation-icon-space) / 2);
+            background: var(--navigation-color-fg);
+            transform-origin: 0 calc(var(--navigation-icon-space) / 2);
             transition       :
                 transform  0.5s  cubic-bezier(0.77, 0.2, 0.05, 1.0),
                 background 0.5s  cubic-bezier(0.77, 0.2, 0.05, 1.0),
@@ -69,17 +69,17 @@
      * The hidden menu, prepared to transition into screen
      */
     & > ul {
-        display  : block;
-        position : absolute;
-        right    : -100%;
-        overflow                  : hidden;
-        list-style                : none;
-        margin                    : 0;
-        width                     : 50%;
-        padding                   : var(--navigation-cont-margin) 0;
-        border-bottom-left-radius : var(--navigation-cont-margin);
-        background                : color(var(--navigation-color-bg) lightness(33%));
-        transition                : right 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+        display: block;
+        position: absolute;
+        right: 0;
+        overflow: hidden;
+        list-style: none;
+        margin: 0;
+        max-width: 0;
+        padding: var(--navigation-cont-margin) 0;
+        border-bottom-left-radius: var(--navigation-cont-margin);
+        background: color(var(--navigation-color-bg) lightness(33%));
+        transition: max-width 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
         box-shadow                :
             var(--navigation-cont-margin)
             var(--navigation-cont-margin)
@@ -95,13 +95,13 @@
         }
 
         & > li > a {
-            padding-left: calc(var(--navigation-cont-margin) * 2);
+            padding: 0 calc(var(--navigation-cont-margin) * 2);
             text-decoration: none;
-            color     : var(--navigation-color-fg);
+            color: var(--navigation-color-fg);
 
             &:hover {
                 background: var(--navigation-color-fg);
-                color     : var(--navigation-color-bg);
+                color: var(--navigation-color-bg);
             }
         }
     }
@@ -111,14 +111,15 @@
      * Used to trigger the "checked" state so we can show/hide the menu
      */
     & > input {
-        z-index  : 1;
-        display  : block;
-        position : absolute;
-        right    : 0;
-        top      : 0;
-        opacity :  0;
-        width   :  var(--navigation-size);
-        height  :  var(--navigation-size);
+        z-index: 1;
+        display: block;
+        position: absolute;
+        right: 0;
+        top: 0;
+        cursor: pointer;
+        opacity: 0;
+        width: var(--navigation-size);
+        height: var(--navigation-size);
 
         /**
          * THE CHECKED HAMBURGUER ICON
@@ -151,7 +152,7 @@
          * The menu showing in all its glory.
          */
         &:checked ~ ul {
-            right: 0;
+            max-width: 320px
         }
     }
 }
